Bug 1809561 - Check IsInProcess() before calling SameOriginWithTop() for <dialog> r=smaug

Looks like in an edge case, this method could be called on a
out-of-process browsing context.

Differential Revision: https://phabricator.services.mozilla.com/D171766